--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Hello, world!</title>
+    <title>Copype</title>
   </head>
   <body>
-    <p>Hello, world!</p>
-    <script src="/main.js"></script>
+    <div id="main"></div>
+    <script src="./main.js"></script>
   </body>
 </html>
